--- a/web/login.html
+++ b/web/login.html
@@ -76,9 +76,9 @@
 
 <div class="login">
     <h1>Login</h1>
-    <form method="post">
-        <input type="text" name="u" placeholder="用户名" required="required" />
-        <input type="password" name="p" placeholder="密码" required="required" />
+    <form action="loginServlet" method="post">
+        <input type="text" name="user" placeholder="用户名" required="required" />
+        <input type="password" name="password" placeholder="密码" required="required" />
         <button type="submit" class="btn btn-primary btn-block btn-large">登录</button>
     </form>
 </div>
